# primer-scout

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: engine.rs
benchmarks/: CRITERION_RESULTS.md  RESULTS.md
data/: demo.fa  demo_primers.tsv
docs/: github-launch.md
releases/: v0.1.0.md
scripts/: run_benchmark.sh
src/: cli.rs  console.rs  lib.rs  main.rs  splash.rs  update.rs
