[package]
name = "primer-scout"
version = "0.1.0"
edition = "2024"
default-run = "primer-scout"
license = "MIT"
description = "Fast Rust primer off-target scanner for FASTA references"
repository = "https://github.com/your-username/primer-scout"
keywords = ["bioinformatics", "primers", "fasta", "pcr", "rust"]
categories = ["science", "command-line-utilities"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
crossterm = "0.29.0"
flate2 = "1.1.9"
rayon = "1.11.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "2.12.1", features = ["json"] }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "engine"
harness = false
